src/objects/BuildDetails__c.object
<CustomObject>
    <fields>
        <fullName>ApplicationVersion__c</fullName>
        <label>Application Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVNRevisionEnd__c</fullName>
        <label>SVN Revision End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVNRevisionStart__c</fullName>
        <label>SVN Revision Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Build Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SVNRevisionEnd__c</columns>
        <columns>SVNRevisionStart__c</columns>
        <columns>ApplicationVersion__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>V-{000}</displayFormat>
        <label>Build Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Build Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>